; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_simple.c_test_odb_backend_simple__read_prefix_of_nonexisting_object_fails.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_simple.c_test_odb_backend_simple__read_prefix_of_nonexisting_object_fails.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i8* }

@.str = private unnamed_addr constant [41 x i8] c"f6ea0495187600e7b2288c8ac19c5886383a4632\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"foobar\00", align 1
@__const.test_odb_backend_simple__read_prefix_of_nonexisting_object_fails.objs = private unnamed_addr constant [2 x %struct.TYPE_3__] [%struct.TYPE_3__ { i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i32 0, i32 0) }, %struct.TYPE_3__ zeroinitializer], align 16
@.str.2 = private unnamed_addr constant [17 x i8] c"f6ea0495187600e8\00", align 1
@_oid = common dso_local global i32 0, align 4
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@_obj = common dso_local global i32 0, align 4
@_odb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_odb_backend_simple__read_prefix_of_nonexisting_object_fails() #0 {
  %1 = alloca [2 x %struct.TYPE_3__], align 16
  %2 = alloca i8*, align 8
  %3 = bitcast [2 x %struct.TYPE_3__]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %3, i8* align 16 bitcast ([2 x %struct.TYPE_3__]* @__const.test_odb_backend_simple__read_prefix_of_nonexisting_object_fails.objs to i8*), i64 32, i1 false)
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  %4 = getelementptr inbounds [2 x %struct.TYPE_3__], [2 x %struct.TYPE_3__]* %1, i64 0, i64 0
  %5 = call i32 @setup_backend(%struct.TYPE_3__* %4)
  %6 = load i8*, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @strlen(i8* %7)
  %9 = call i32 @git_oid_fromstrn(i32* @_oid, i8* %6, i32 %8)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32, i32* @GIT_ENOTFOUND, align 4
  %12 = load i32, i32* @_odb, align 4
  %13 = call i32 @git_odb_read(i32* @_obj, i32 %12, i32* @_oid)
  %14 = call i32 @cl_git_fail_with(i32 %11, i32 %13)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @setup_backend(%struct.TYPE_3__*) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_oid_fromstrn(i32*, i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @cl_git_fail_with(i32, i32) #2

declare dso_local i32 @git_odb_read(i32*, i32, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
